<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyFragment">

    <TextView
        android:id="@+id/self_assessment_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/self_assessment_warning" />

    <TextView
        android:id="@+id/quest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/question1" />

    <RadioGroup
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terrible" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bad" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neutral" />

        <RadioButton
            android:id="@+id/option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/option5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing" />

    </RadioGroup>

    <TextView
        android:id="@+id/quest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"
        android:text="@string/question2" />

    <RadioGroup
        android:id="@+id/question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation='horizontal'
        android:visibility="visible"
        tools:layout_editor_absoluteX="394dp">

        <RadioButton
            android:id="@+id/option2.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terrible" />

        <RadioButton
            android:id="@+id/option2.2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bad" />

        <RadioButton
            android:id="@+id/option2.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neutral" />

        <RadioButton
            android:id="@+id/option2.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/option2.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amazing" />
    </RadioGroup>

    <TextView
        android:id="@+id/quest3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="340dp"
        android:text="@string/question3" />

    <RadioGroup
        android:id="@+id/question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/option3.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/a_lot" />

        <RadioButton
            android:id="@+id/option3.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/some" />

        <RadioButton
            android:id="@+id/option3.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/neutral" />

        <RadioButton
            android:id="@+id/option3.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/little" />

        <RadioButton
            android:id="@+id/option3.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none" />
    </RadioGroup>

    <TextView
        android:id="@+id/quest4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="490dp"
        android:text="@string/question4" />

    <RadioGroup
        android:id="@+id/question4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:orientation='horizontal'>

        <RadioButton
            android:id="@+id/option4.1"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none" />

        <RadioButton
            android:id="@+id/option4.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_hour" />

        <RadioButton
            android:id="@+id/option4.3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two_hours" />

        <RadioButton
            android:id="@+id/option4.4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three_hours" />

        <RadioButton
            android:id="@+id/option4.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four_plus_hours" />
    </RadioGroup>


    <Button
        android:id="@+id/submit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/button_background"
        android:elevation="2dp"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="15sp" />

</FrameLayout>