<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".SelfAssessmentActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigationView">

        <TextView
            android:id="@+id/self_assessment_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/self_assessment_warning" />

        <TextView
            android:id="@+id/quest1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation='horizontal'>

            <RadioButton
                android:id="@+id/option1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terrible" />

            <RadioButton
                android:id="@+id/option2"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:text="@string/bad" />

            <RadioButton
                android:id="@+id/option3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/neutral" />

            <RadioButton
                android:id="@+id/option4"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/option5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing" />

        </RadioGroup>

        <TextView
            android:id="@+id/quest2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="240dp"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/question2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:orientation='horizontal'
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="394dp">

            <RadioButton
                android:id="@+id/option2.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terrible" />

            <RadioButton
                android:id="@+id/option2.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bad" />

            <RadioButton
                android:id="@+id/option2.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/neutral" />

            <RadioButton
                android:id="@+id/option2.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/option2.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amazing" />
        </RadioGroup>

        <TextView
            android:id="@+id/quest3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="390dp"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/question3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:orientation='horizontal'>

            <RadioButton
                android:id="@+id/option3.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a_lot" />

            <RadioButton
                android:id="@+id/option3.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/some" />

            <RadioButton
                android:id="@+id/option3.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/neutral" />

            <RadioButton
                android:id="@+id/option3.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/little" />

            <RadioButton
                android:id="@+id/option3.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none" />
        </RadioGroup>

        <TextView
            android:id="@+id/quest4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="540dp"
            android:text="@string/question4" />

        <RadioGroup
            android:id="@+id/question4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="550dp"
            android:orientation='horizontal'>

            <RadioButton
                android:id="@+id/option4.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/none" />

            <RadioButton
                android:id="@+id/option4.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_hour" />

            <RadioButton
                android:id="@+id/option4.3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_hours" />

            <RadioButton
                android:id="@+id/option4.4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_hours" />

            <RadioButton
                android:id="@+id/option4.5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four_plus_hours" />
        </RadioGroup>


        <Button
            android:id="@+id/submit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="600dp"
            android:backgroundTint="@color/button_background"
            android:elevation="2dp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/selfAssessmentTitle"
            android:layout_width="229dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/self_assessment"
            android:textSize="30sp" />
    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>